--- a/cadastro-produtos.html
+++ b/cadastro-produtos.html
@@ -10,11 +10,11 @@
 
 <body>
   <header>
-  
+
   </header>
 
   <main>
-    <div>      <!---> Botão para sair -->
+    <div> <!---> Botão para sair -->
       <a href="index.html" class="sair">Sair</a>
     </div><br>
     <form id="form-produto" action="#" method="post" enctype="multipart/form-data">
@@ -41,33 +41,13 @@
       <input type="file" id="imagem" name="imagem" accept="image/*"><br><br>
 
       <!-- Pré-visualização da imagem -->
-      <img id="preview" src="" alt="Pré-visualização" style="display:none; max-width:100%; margin-bottom:10px; border-radius:5px;">
+      <img id="preview" src="" alt="Pré-visualização"
+        style="display:none; max-width:100%; margin-bottom:10px; border-radius:5px;">
 
       <input type="submit" value="Cadastrar">
       <input type="reset" value="Redefinir">
     </form>
   </main>
-
-  <script>
-    // Pré-visualização da imagem
-    const inputImagem = document.getElementById('imagem');
-    const preview = document.getElementById('preview');
-
-    inputImagem.addEventListener('change', function() {
-      const file = this.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.addEventListener('load', function() {
-          preview.setAttribute('src', this.result);
-          preview.style.display = 'block';
-        });
-        reader.readAsDataURL(file);
-      } else {
-        preview.setAttribute('src', '');
-        preview.style.display = 'none';
-      }
-    });
-  </script>
 </body>
 
 </html>
