--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   </header>
 
   <main>
-    <form action="#" method="post">
+    <form action="cadastro-produtos.html" method="get">
+
       <label for="email">E-mail:</label><br>
       <input type="email" id="email" name="email" required><br><br>
 
