--- a/index.html
+++ b/index.html
@@ -10,25 +10,31 @@
 
 <body>
   <header>
-    <div><h1>Vem, vem!<br> 
-      Água potável <br>a gente tem!</h1>
-          <img src="img/logo.png" alt="logo" class="logo">
-</div>
+    <div>
+      <h1>Vem, vem!<br>
+        Água potável <br>a gente tem!</h1>
+      <img src="img/logo.png" alt="logo" class="logo">
+    </div>
   </header>
 
   <main>
     <form action="cadastro-produtos.html" method="get">
 
-      <label for="email">E-mail:</label><br>
-      <input type="email" id="email" name="email" required><br><br>
+      <label for="usuario">Usuário:</label><br>
+      <input type="text" id="usuario" name="usuario" required><br><br>
 
       <label for="senha">Senha:</label><br>
       <input type="password" id="senha" name="senha" required><br><br>
 
       <input type="submit" value="Entrar">
+
+
       <input type="button" value="Cancelar">
       <input type="reset" value="Redefinir">
     </form>
+
+
+
   </main>
 </body>
 
