--- a/cadastro-produtos.html
+++ b/cadastro-produtos.html
@@ -46,8 +46,11 @@
 
       <input type="submit" value="Cadastrar">
       <input type="reset" value="Redefinir">
+
     </form>
   </main>
+  <script src="produtos.js"></script>
+
 </body>
 
 </html>
